project/syntax_tests/tests_input/unit/bad/Bad41.ty
singleton class FunctionsAndActions { 
    
    functions: {
        someFunction: (f: get (x: Int) -> Int, g: get (x: Int) -> Bool) -> Bool = {
            if (g(5)) then f(5) else f(7)
        }
    }
}
